--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-project",
   "private": true,
+  "homepage": "https://AliGhamarii.github.io/JewelryShop",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
